--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,34 +1,26 @@
 
-/* if you are using any Google fonts change the font names below to your fonts. 
-Any spaces in your font name should be replaced with a +. 
-Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
-
 :root {
-  /* change the values below to your colors from your palette */
   --primary-color: #52EBEA   ;
   --secondary-color: #2B9E9D ;
   --accent1-color: #EBAF8D;
   --accent2-color: #C78965;
 
-  /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: Verdana, Arial, sans-serif;
+  --paragraph-font: Tahoma, sans-serif;
 
-  /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --headline-color-on-white: #477B7A;
+  --headline-color-on-color: white;
+  --paragraph-color-on-white: #477B7A;
+  --paragraph-color-on-color: white;
+  --paragraph-background-color: #477B7A;
+  --nav-link-color: #333939;
+  --nav-background-color: #EBAF8D;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #477B7A;
 }
 
 
-/*  Look around below...but DON'T CHANGE ANYTHING! */
+/* 333939 Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
   max-width: 960px;
