--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,24 +1,34 @@
-*{
-    border: 2px solid black;
-}
+
 nav, footer {
     background-color: steelblue;
     color: white;
-    padding: 2% 1%;
+    padding: 25px;
+}
+a {
+    color: white;
+    padding: 25px;
 }
 a:hover {
     background-color: white;
     color: steelblue;
 }
+body {
+    margin: 0;
+}
 h1, img{
     text-align: center;
+}
+h1 {
+    margin: 50px 0;
 }
 img{
     width: 60%;
     display: block;
     margin:0 auto;
+    border: 4px solid steelblue;
 }
 footer p {
     font-size: 20px;
     margin: 20px auto;
+    padding: 20px;
 }
