--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -4,9 +4,10 @@
     --accent1-color: #EBAF8D;
     --accent2-color: #C78965;
     --background-color: #fcfbfb;
+    --background-gray: #eaedee;
   
     --heading-font: Verdana, Arial, sans-serif;
-    --paragraph-font: Tahoma, sans-serif;
+    --paragraph-font: Tahoma, 'Trebuchet MS', sans-serif;
   
     --headline-color-on-white: #477B7A;
     --headline-color-on-color: #fcfbfb;
@@ -30,6 +31,8 @@
 }
 body{
     background-color: var(--background-color);
+    margin: 0;
+    padding: 0;
 }
 header{
     background-color: var(--secondary-color);
@@ -37,11 +40,16 @@ header{
 .logo{
     width: 80px;
 }
+#logo-link {
+    padding-top: 5px;
+}
 nav a{
     text-align: center;
     text-decoration: none;
     color: var(--nav-hover-link-color);
     background-color: var(--nav-background-color);
+    font-family: var(--heading-font);
+    padding: 35px;
 }
 nav a:hover{
     background-color: var(--nav-hover-background-color);
@@ -52,19 +60,19 @@ nav a:hover{
 }
 .home-title{
     color: var(--headline-color-on-white);
-    font: var(--heading-font);
+    font-family: var(--heading-font);
     font-size: 2em;
     font-weight: bold;
-}
-h4{
-    color: var(--paragraph-background-color);
-    font: var(--paragraph-font);
+    margin-top: 10px;
 }
 #hero-msg h1, #hero-msg h4{
     text-align: center
 }
 #hero-msg h4{
     color: var(--paragraph-color-on-white);
+}
+h4 {
+    font-family: var(--paragraph-font);
 }
 .button-box{
     text-align: center
@@ -73,6 +81,11 @@ h4{
     background-color: var(--accent1-color);
     text-decoration: none;
     color: var(--nav-link-color);
+    font-size: 18px;
+    font-family: var(--heading-font);
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color: var(--secondary-color);
@@ -81,36 +94,68 @@ h4{
 main section{
     text-align: center
 }
+main section img {
+    box-sizing: border-box;
+}
 .home-grid{
     color: var(--headline-color-on-white);
 }
 .card-image{
     width: 30%;
+    border: 10px solid var(--accent1-color);
+}
+.machine-card, .game-card, .locations-card {
+    margin: 200px 0;
 }
 .icon{
     width: 80px;
+    padding-top: 10px
+}
+h2 {
+    margin: 0;
+}
+.home-grid section h2 {
+    font-family: var(--heading-font)
+}
+.grass {
+    width: 50%;
+    margin-top: 100px;
+    margin-bottom: 200px;
+}
+.msg {
+    background-color: var(--footer-background-color);
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
-    color: var(--headline-color-on-white);
+    color: var(--headline-color-on-color);
+    font-family: var(--heading-font);
 }
 .msg p{
-    color: var(--paragraph-color-on-white);
+    color: var(--paragraph-color-on-color);
+    font-size: .9em;
+    font-family: var(--paragraph-font);
+    padding-bottom: 15px;
 }
 footer{
     background-color: var(--footer-background-color);
     color: var(--paragraph-color-on-color);
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer p{
     font-size: 1.3em;
+    font-family: var(--paragraph-font);
 }
 footer p a:hover{
     text-decoration: underline;
-    color: var(--nav-link-color)
+    color: var(--footer-background-color);
+    background-color: var(--background-color);
 }
 footer a{
     color: var(--paragraph-color-on-color);
     text-decoration: none;
 }
-footer a:hover{
-    background-color: var(--nav-background-color);
+footer .social img {
+    padding-top: 15px;
 }
