--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -23,60 +23,87 @@
     --background-gradient: linear-gradient(135deg, #52EBEA 8%, #2B9E9D 40%, #EBAF8D 85%);
     --gradient: linear-gradient(135deg, #C31A86 8%, #933FA0 50%, #00ADEE 92%);
     --brown-gradient: linear-gradient(135deg, #EBAF8D, #C78965 50%);
-    --blue-gradient: radial-gradient(#52EBEA, #2B9E9D 95%);
-  }
-
-#background{
-    background-image: var(--background-gradient);
-    height: 725px;
+    --blue-gradient: radial-gradient(#52EBEA 30%, #2B9E9D 95%);
+    --bluelinear-gradient: linear-gradient(#52EBEA 30%, #2B9E9D 95%);
 }
+
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
 }
 body{
-    background-color: var(--background-black);
+    background-color: #52EBEA;
     margin: 0;
     padding: 0;
+    
 }
 header{
-    background-image: var(--background-gradient);
+    background: var(--background-gradient);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 .logo{
     width: 80px;
+    transition: transform .15s;
 }
+.logo:hover{
+    transform: scale(1.075);
+}
+
 #logo-link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 nav a{
     text-align: center;
     text-decoration: none;
     color: var(--nav-hover-link-color);
-    background-image: var(--brown-gradient);
     font-family: var(--heading-font);
     padding: 10px 35px;
-    border-radius: 5px;
     margin: 10px;
+    
 }
 nav a:hover{
-    background-image: var(--blue-gradient);
-    color: var(--nav-hover-link-color);
+    color: var(--nav-link-color);
+    transition: transform .15s;
+    transform: scale(1.1);
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
 }
 #hero-img{
     width: 100%;
+    margin-top: -25px;
+}
+#hero-box {
+    grid-area: 1 / 1 / 3 / 4;
+    z-index: -1;
 }
 .home-title{
-    color: var(--headline-color-on-white);
+    color: var(--headline-color-on-color);
     font-family: var(--heading-font);
     font-size: 2em;
     font-weight: bold;
     margin-top: 10px;
 }
+#hero-msg {
+    grid-area: 1 / 2 / 2 / 3;
+    margin-top: 100px;
+}
 #hero-msg h1, #hero-msg h4{
     text-align: center
 }
 #hero-msg h4{
-    color: var(--paragraph-color-on-white);
+    color: var(--paragraph-color-on-color);
+    margin-bottom: 10px;
 }
 h4 {
     font-family: var(--paragraph-font);
@@ -91,33 +118,60 @@ h4 {
     font-size: 18px;
     font-family: var(--heading-font);
     padding: 15px 30px;
-    margin-top: 50px;
     border-radius: 5px;
+    display: inline-block;
 }
 .book:hover, .join:hover{
     background-image: var(--blue-gradient);
     color: var(--nav-link-color);
-    transform: scale(1.1, 1.1);
 }
+.button-box:hover {
+    transition: transform .15s;
+    transform: scale(1.05);
+}
+
 main section{
     text-align: center
 }
 main section img {
     box-sizing: border-box;
 }
+#background{
+    background-image: var(--background-gradient);
+    height: 725px;
+    grid-area: 4 / 1 / 9 / 11;
+    border: 5px solid var(--accent1-color);
+}
 .home-grid{
     color: var(--headline-color-on-white);
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 .card-image{
-    width: 30%;
+    width: 100%;
     border: 10px solid var(--accent1-color);
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-image:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
 }
 .machine-card, .game-card, .locations-card {
     margin: 200px 0;
 }
+.machine-card {
+    grid-area: 2 / 2 / 3 / 4;
+}
+.game-card {
+    grid-area: 2 / 5 / 3 / 7;
+}
+.locations-card {
+    grid-area: 2 / 8 / 3 / 10;
+}
 .icon{
     width: 80px;
-    padding-top: 10px
+    padding-top: 10px;
 }
 h2 {
     margin: 0;
@@ -126,14 +180,19 @@ h2 {
     font-family: var(--heading-font)
 }
 .grass {
-    width: 50%;
+    width: 100%;
     margin-top: 100px;
     margin-bottom: 200px;
+    grid-area: 5 / 2 / 8 / 7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg {
-    background-color: var(--footer-background-color);
+    background-image: var(--bluelinear-gradient);
     line-height: 1.5em;
     padding: 35px;
+    border-radius: 5px;
+    grid-area: 6 / 6 / 7 / 10;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2{
     color: var(--headline-color-on-color);
@@ -150,6 +209,9 @@ footer{
     color: var(--paragraph-color-on-color);
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p{
     font-size: 1.3em;
@@ -168,4 +230,47 @@ footer a{
 }
 footer .social img {
     padding-top: 15px;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
