--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -27,6 +27,19 @@
     --bluelinear-gradient: linear-gradient(#52EBEA 30%, #2B9E9D 95%);
 }
 
+.header-on-white {
+    color: var(--headline-color-on-white)
+}
+.header-on-color {
+    color: var(--headline-color-on-color)
+}
+
+
+
+
+
+
+
 
 #content{
     max-width: 1600px;
@@ -78,6 +91,9 @@ nav a:hover{
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    perspective: 1px;
+    height: 100vh;
+    overflow: hidden
 }
 #hero-img{
     width: 100%;
@@ -88,7 +104,6 @@ nav a:hover{
     z-index: -1;
 }
 .home-title{
-    color: var(--headline-color-on-color);
     font-family: var(--heading-font);
     font-size: 2em;
     font-weight: bold;
@@ -111,7 +126,7 @@ h4 {
 .button-box{
     text-align: center
 }
-.book, .join{
+.book, .join, .search{
     background-image: var(--brown-gradient);
     text-decoration: none;
     color: var(--nav-link-color);
@@ -121,7 +136,7 @@ h4 {
     border-radius: 5px;
     display: inline-block;
 }
-.book:hover, .join:hover{
+.book:hover, .join:hover, .search:hover{
     background-image: var(--blue-gradient);
     color: var(--nav-link-color);
 }
@@ -204,6 +219,71 @@ h2 {
     font-family: var(--paragraph-font);
     padding-bottom: 15px;
 }
+#book-now-grid {
+    margin: 5%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5%;
+}
+#book-now-grid h2{
+    color: var(--headline-color-on-white);
+}
+.book-title {
+    font-size: 3em;
+    background-color: rgba(235, 175, 141, .8);
+    width: 70%;
+    margin: auto;
+    border-radius: 10px;
+}
+.book-text {
+    grid-area: 1 / 1 / 2 / 3;
+    margin: 0 20%;
+    color: var(--headline-color-on-white);
+    font-size: 1.5em;
+}
+.locations {
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    margin: 3em 0;
+}
+.locations-title {
+    font-size: 3em;
+    padding-top: 1em;
+}
+.locations-input {
+    font-size: 1.5em;
+}
+.locations-input input {
+    white-space: nowrap;
+    font-size: 1.5em;
+}
+.clock {
+    grid-area: 3 / 1 / 4 / 2;
+    height: 35em;
+}
+.availabilities {
+    grid-area: 3 / 2 / 4 / 3;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+.availabilities h2 {
+    font-size: 3em;
+    margin: 0.5em 0;
+}
+.book-final-msg {
+    font-size: 3em;
+    grid-column: 1 / 3;
+    margin-bottom: 2em; 
+    text-align: center;
+}
+
+
+
+
 footer{
     background-color: var(--footer-background-color);
     color: var(--paragraph-color-on-color);
